# SonarKAN

./: README.md  requirements.txt
.github/workflows/: python-publish.yml
configs/: fig1.yaml  fig2.yaml
outputs/fig2/run_20251215_111327/: config_resolved.yaml  results_aggregate.npz  summary.json
outputs/fig2/run_20251215_111327/seed_42/: results_seed.npz
outputs/fig2/run_20251215_111327/seed_43/: results_seed.npz
outputs/fig2/run_20251215_111327/seed_44/: results_seed.npz
outputs/fig2/run_20251215_111327/seed_45/: results_seed.npz
outputs/fig2/run_20251215_111327/seed_46/: results_seed.npz
scripts/: draw_fig1.py  plot_fig2.py  run_fig2_experiment.py
src/: MANIFEST.in  pyproject.toml  setup.py  setup.sh
src/SonarKAN.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/sonarkan/: bspline.py  models.py  surrogate.py
